### Makefile.am for kerrighed tests
###
### Copyright 2006-2007 INRIA, All rights reserved
###
### Author:
###   Jean Parpaillon <jean.parpaillon@kerlabs.com>
###
SUBDIRS = include

if ENABLE_APPS
SUBDIRS += apps
endif
if ENABLE_PROC
SUBDIRS += proc
endif
if ENABLE_KTP
SUBDIRS += ktp
endif
if ENABLE_BENCHMARK
SUBDIRS += benchmark
endif
