### Makefile.am for kerrighed libraries headers
### 
### Copyright 2006-2007 INRIA-IRISA
###        Jean Parpaillon <jean.parpaillon@irisa.fr>
###

#
# libkerrighed
#
if BUILD_LIBKERRIGHED
kerrighedincludedir=$(includedir)/kerrighed

kerrighedinclude_HEADERS = \
	kerrighed.h \
	capability.h \
	capabilities.h \
	proc.h \
	types.h \
	checkpoint.h \
	kerrighed_tools.h \
	hotplug.h \
	kerrighed/krgnodemask.h
endif
