### Makefile.am for kerrighed libraries headers
###
### Copyright 2006-2007 INRIA, All rights reserved
### Copyright 2009 Kerlabs
###
### Author:
###   Jean Parpaillon <jean.parpaillon@kerlabs.com>
###

#
# libkerrighed
#
if ENABLE_LIBKERRIGHED
kerrighedincludedir=$(includedir)/kerrighed

kerrighedinclude_HEADERS = \
	kerrighed.h \
	capability.h \
	capabilities.h \
	proc.h \
	types.h \
	checkpoint.h \
	kerrighed_tools.h \
	hotplug.h \
	krgnodemask.h \
	libkrgcb.h
endif
