### Makefile.am for kerrighed libraries headers
###
### Copyright 2006-2007 INRIA, All rights reserved
### Copyright 2009 Kerlabs, All rights reserved
###
### Authors:
###        Jean Parpaillon <jean.parpaillon@kerlabs.com>
###

if ENABLE_LIBKERRIGHED
kerrighedincludedir=$(includedir)/kerrighed

kerrighedinclude_HEADERS = \
	kerrighed.h \
	capability.h \
	capabilities.h \
	ipc.h \
	proc.h \
	types.h \
	migration.h \
	checkpoint.h \
	kerrighed_tools.h \
	hotplug.h \
	krgnodemask.h \
	libkrgcb.h \
	libkrgcheckpoint.h
endif
