### Makefile.am for kerrighed tests
###
### Copyright 2007 INRIA-IRISA
###                     Jean Parpaillon <jean.parpaillon@irisa.fr>
###
tests_SCRIPTS = \
	cr01 \
	cr02 \
	cr03 \
	cr04 \
	cr05 \
	cr06 \
	cr07 \
	cr08 \
	cr09 \
	cr10 \
	cr11 \
	cr12 \
	cr13 \
	cr14 \
	cr15 \
	cr16 \
	cr17 \
	cr18 \
	cr19 \
	cr20 \
	cr21 \
	cr22 \
	cr23 \
	cr24 \
	cr-pre \
	cr-post \
	cr_abort01 \
	cr_abort02 \
	cr_callbacks01 \
	cr_clone_files01 \
	cr_clone_fs01 \
	cr_clone_semundo01 \
	cr_freeze_unfreeze \
	cr_stress \
	cr_tree01 \
	cr_tree02 \
	cr_signal01 \
	cr_thread01 \
	cr_thread_java01 \
	cr_ipc_shm01 \
	cr_ipc_shm02 \
	cr_ipc_msg01 \
	cr_ipc_sem01 \
	cr_ipc_sem02 \
	cr_posix_shm01 \
	cr_posix_shm02 \
	cr_pipe01 \
	cr_pipe02 \
	cr_exclude_mm01 \
	lib_cr.sh \
	lib_cr_ipc.sh

testsdir = @ltpbase@/testcases/bin

EXTRA_DIST = $(tests_SCRIPTS)
