### Makefile.am for kerrighed tests
###
### Copyright 2010 Kerlabs
###                     Matthieu Fertré <matthieu.fertre@kerlabs.com>
###
tests_SCRIPTS = \
	lib_faf.sh \
	check_leak \
	faf_chmod \
	faf_chown \
	faf_mmap \
	faf_truncate \
	faf_utimes

testsdir = @ltpbase@/testcases/bin

EXTRA_DIST = $(tests_SCRIPTS)
