### Makefile.am for kerrighed tests
###
### Copyright 2009 Polytech'Tours
###                     Alexandre Lissy <alexandre.lissy@etu.univ-tours.fr>
###
testsuser_SCRIPTS = \
	cpuspeed_probe.sh \
	load_probe.sh \
	processsize_probe.sh

testsuserdir = @ltpbase@/testcases/bin

EXTRA_DIST = $(testsuser_SCRIPTS)
